[gd_scene load_steps=18 format=3 uid="uid://1yrqwkydp78d"]

[ext_resource type="Theme" uid="uid://dcxfejhbbj3pi" path="res://Other/Themes/displays_theme.tres" id="1_tevf8"]
[ext_resource type="Script" uid="uid://bgd2v1alhdml" path="res://Scripts/map_screen.gd" id="2_7kq8d"]
[ext_resource type="AudioStream" uid="uid://bwf4nucobwg4x" path="res://Assets/Sounds/music/intense1.mp3" id="3_e37xu"]
[ext_resource type="Script" uid="uid://dyg342n2aof80" path="res://Scripts/menu_button.gd" id="4_eht7p"]
[ext_resource type="Script" uid="uid://bt1hsr8ak5gi0" path="res://Scripts/menu_deco_bg.gd" id="6_ha6nx"]
[ext_resource type="Shader" uid="uid://cmxevu6p4n1ey" path="res://Other/Shaders/hueShift_effect.gdshader" id="7_x4tce"]
[ext_resource type="Theme" uid="uid://r4gv8ac0831q" path="res://Other/Themes/small_text_theme.tres" id="8_f6rh0"]
[ext_resource type="Texture2D" uid="uid://cgij2ayo7erbd" path="res://Assets/Graphics/sprites/sprites_userInterface.png" id="8_ru2um"]

[sub_resource type="Gradient" id="Gradient_uas2u"]
colors = PackedColorArray(0.618933, 1.73271e-06, 3.85046e-07, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_agkmp"]
gradient = SubResource("Gradient_uas2u")

[sub_resource type="Animation" id="Animation_v8wcq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f1f2o"]
resource_name = "fade_from_black"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7qc2w"]
resource_name = "fade_to_black"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j83ll"]
_data = {
&"RESET": SubResource("Animation_v8wcq"),
&"fade_from_black": SubResource("Animation_f1f2o"),
&"fade_to_black": SubResource("Animation_7qc2w")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m05sk"]
shader = ExtResource("7_x4tce")
shader_parameter/Shift_Hue = 0.3

[sub_resource type="AtlasTexture" id="AtlasTexture_7vxly"]
atlas = ExtResource("8_ru2um")
region = Rect2(896, 123, 360, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot7iw"]
atlas = ExtResource("8_ru2um")
region = Rect2(0, 96, 288, 256)

[node name="Map Screen" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tevf8")
script = ExtResource("2_7kq8d")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e37xu")
autoplay = true

[node name="menu_main" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="menu_container" type="VBoxContainer" parent="menu_main"]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -832.0
offset_top = 276.0
offset_right = -192.0
offset_bottom = 476.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tevf8")

[node name="Control" type="Control" parent="menu_main/menu_container"]
z_index = 25
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Enable Score Attack Mode" type="Button" parent="menu_main/menu_container/Control"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
z_index = 1
custom_minimum_size = Vector2(640, 64)
layout_mode = 2
offset_top = 12.0
offset_right = 640.0
offset_bottom = 76.0
size_flags_horizontal = 4
script = ExtResource("4_eht7p")
menu_name = "Map Screen"
polygon1_position = Vector2(400, -40)
polygon2_position = Vector2(400, 10)
polygon3_position = Vector2(-488, 10)

[node name="RichTextLabel" type="RichTextLabel" parent="menu_main/menu_container/Control/Enable Score Attack Mode"]
z_index = 50
clip_contents = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 64.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[wave amp=50.0 freq=10.0 connected=1]Enable Score Attack Mode[/wave]"
autowrap_mode = 0

[node name="Control2" type="Control" parent="menu_main/menu_container"]
z_index = 25
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Back to overworld" type="Button" parent="menu_main/menu_container/Control2"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
z_index = 1
custom_minimum_size = Vector2(640, 64)
layout_mode = 2
offset_top = 8.0
offset_right = 640.0
offset_bottom = 72.0
size_flags_horizontal = 4
script = ExtResource("4_eht7p")
menu_name = "Map Screen"
polygon1_position = Vector2(150, -40)
polygon2_position = Vector2(150, 10)
polygon3_position = Vector2(-488, 10)

[node name="RichTextLabel" type="RichTextLabel" parent="menu_main/menu_container/Control2/Back to overworld"]
z_index = 50
clip_contents = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 64.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[wave amp=50.0 freq=10.0 connected=1]Back to overworld[/wave]"
autowrap_mode = 0

[node name="Control3" type="Control" parent="menu_main/menu_container"]
z_index = 25
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Main menu" type="Button" parent="menu_main/menu_container/Control3"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
z_index = 1
custom_minimum_size = Vector2(640, 64)
layout_mode = 2
offset_top = 4.0
offset_right = 640.0
offset_bottom = 68.0
size_flags_horizontal = 4
script = ExtResource("4_eht7p")
menu_name = "Map Screen"
polygon1_position = Vector2(-100, -40)
polygon2_position = Vector2(-100, 10)
polygon3_position = Vector2(-488, 10)

[node name="RichTextLabel" type="RichTextLabel" parent="menu_main/menu_container/Control3/Main menu"]
z_index = 50
clip_contents = false
layout_mode = 0
offset_right = 640.0
offset_bottom = 64.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[wave amp=50.0 freq=10.0 connected=1]Main menu[/wave]"
autowrap_mode = 0

[node name="background" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = -5
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
mouse_filter = 2
texture = SubResource("GradientTexture1D_agkmp")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 25
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="fade_animation" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_j83ll")
}
speed_scale = 5.0

[node name="menu_deco_bg_root" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
script = ExtResource("6_ha6nx")
multiplier_W = 1.2
skew_low = 0.75
skew_high = 0.8
scale_low_X = 0.6
scale_low_Y = 0.65
scale_high_Y = 0.75
position_target = Vector2(-800, 150)
speed_W = 12.0
speed_H = 4.0

[node name="menu_deco_bg" type="TextureRect" parent="menu_deco_bg_root"]
unique_name_in_owner = true
z_index = -4
material = SubResource("ShaderMaterial_m05sk")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_right = -700.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(750, 250)
mouse_filter = 2
texture = SubResource("AtlasTexture_7vxly")
expand_mode = 1

[node name="level_icon_container" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="level_info_container" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="level_info_container"]
layout_mode = 0
offset_left = 512.0
offset_top = 164.0
offset_right = 832.0
offset_bottom = 484.0
texture = SubResource("AtlasTexture_ot7iw")

[node name="level_info" type="VBoxContainer" parent="level_info_container/TextureRect"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="level_info_container/TextureRect/level_info"]
custom_minimum_size = Vector2(96, 80)
layout_mode = 2

[node name="name" type="Label" parent="level_info_container/TextureRect/level_info/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "name"
horizontal_alignment = 1
vertical_alignment = 2

[node name="name_filler" type="Label" parent="level_info_container/TextureRect/level_info/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_f6rh0")
text = "level name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="level_info_container/TextureRect/level_info"]
custom_minimum_size = Vector2(96, 80)
layout_mode = 2

[node name="score" type="Label" parent="level_info_container/TextureRect/level_info/Control2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "score"
horizontal_alignment = 1
vertical_alignment = 2

[node name="score_filler" type="Label" parent="level_info_container/TextureRect/level_info/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_f6rh0")
text = "best score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control3" type="Control" parent="level_info_container/TextureRect/level_info"]
custom_minimum_size = Vector2(96, 80)
layout_mode = 2

[node name="rank" type="Label" parent="level_info_container/TextureRect/level_info/Control3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "rank"
horizontal_alignment = 1
vertical_alignment = 2

[node name="rank_filler" type="Label" parent="level_info_container/TextureRect/level_info/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_f6rh0")
text = "score rank"
horizontal_alignment = 1
vertical_alignment = 1

[node name="top_rank_score" type="Label" parent="level_info_container/TextureRect/level_info/Control3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 20.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "top_rank_score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons_blocked" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="focus_entered" from="menu_main/menu_container/Control/Enable Score Attack Mode" to="menu_main/menu_container/Control/Enable Score Attack Mode" method="_on_focus_entered"]
[connection signal="focus_exited" from="menu_main/menu_container/Control/Enable Score Attack Mode" to="menu_main/menu_container/Control/Enable Score Attack Mode" method="_on_focus_exited"]
[connection signal="pressed" from="menu_main/menu_container/Control/Enable Score Attack Mode" to="." method="_on_enable_score_attack_mode_pressed"]
[connection signal="focus_entered" from="menu_main/menu_container/Control2/Back to overworld" to="menu_main/menu_container/Control2/Back to overworld" method="_on_focus_entered"]
[connection signal="focus_exited" from="menu_main/menu_container/Control2/Back to overworld" to="menu_main/menu_container/Control2/Back to overworld" method="_on_focus_exited"]
[connection signal="pressed" from="menu_main/menu_container/Control2/Back to overworld" to="." method="_on_back_to_overworld_pressed"]
[connection signal="focus_entered" from="menu_main/menu_container/Control3/Main menu" to="menu_main/menu_container/Control3/Main menu" method="_on_focus_entered"]
[connection signal="focus_exited" from="menu_main/menu_container/Control3/Main menu" to="menu_main/menu_container/Control3/Main menu" method="_on_focus_exited"]
[connection signal="pressed" from="menu_main/menu_container/Control3/Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="animation_finished" from="fade_animation" to="." method="_on_fade_animation_animation_finished"]
[connection signal="timeout" from="buttons_blocked" to="." method="_on_buttons_blocked_timeout"]
